packages/quarkd/src/radio/style.css
:host([radiogrouphost]) {
  font-size: var(--radio-font-size, 16px);
  color: var(--radio-color, #242729);
  display: block;
}

:host([radiohost]) {
  display: flex;
  align-items: center;
}

:host([radiohost]) * {
  cursor: pointer;
}

:host([radiogrouphost][direction="horizontal"]) .quark-radio-group-wrapper {
  display: flex;
  gap: var(--radio-horizontal-gap, 20px)
}

:host([radiohost]) .quark-radio {
  display: flex;
  align-items: center;
  gap: var(--radio-label-gap, 8px);
  cursor: pointer;
  width: 100%;
}


:host([radiohost][name][direction="horizontal"]) {
  border-bottom: 1px solid #ddd;
  padding-bottom: 10px;
}


:host label {
  display: inline-flex;
  align-items: center;
  height: var(--radio-label-height, 100%);
  line-height: var(--radio-label-height, 100%);
}

:host label.quark-radio-hide {
  display: none;
}

:host .quark-radio-container {
  position: relative;
  display: inline-flex;
  height: var(--radio-size, 20px);
  width: var(--radio-size, 20px);
  flex-shrink: 0;
}

:host .quark-radio-icon {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  visibility: hidden;
  opacity: 0;
  transition-duration: 0.2s;
  transition-property: visibility, opacity;
}

:host([size="normal"]) .quark-radio-container {
  height: var(--radio-size, 16px);
  width: var(--radio-size, 16px);
}

:host([size="big"]) .quark-radio-container {
  height: var(--radio-size, 20px);
  width: var(--radio-size, 20px);
}

:host .quark-radio-container input {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
}

:host .quark-radio-container span {
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

:host .quark-radio-container .quark-radio-show {
  background: #ffffff;
  border-radius: 50%;
  position: relative;
}

:host .quark-radio-container .quark-radio-show::after {
  position: absolute;
  box-sizing: border-box;
  content: " ";
  pointer-events: none;
  top: -50%;
  right: -50%;
  bottom: -50%;
  left: -50%;
  border-radius: 50%;
  border: 1px solid quark-formPlaceholderColor;
  transform: scale(0.5);
}

:host([disabled]) * {
  cursor: not-allowed;
}

:host([disabled]) .quark-radio-container .quark-radio-show {
  background: #f0f3f5;
}

:host .quark-radio-container .quark-radio-disabled {
  display: none;
}

:host([disabled][checked]) .quark-radio-container .quark-radio-disabled {
  display: block;
  background: rgba(255, 255, 255, 0.7);
  border-radius: 50%;
  z-index: 3;
}

:host([shape="square"]) .quark-radio-container .quark-radio-show {
  border-radius: 4px;
}

:host([disabled][checked][shape="square"])
  .quark-radio-container
  .quark-radio-disabled {
  border-radius: 4px;
}

:host([shape="square"]) .quark-radio-show::after {
  border-radius: 4px;
}

:host([shape="square"][size="big"]) .quark-radio-container span {
  border-radius: 5px;
}

:host([checked]) .quark-radio-container .quark-radio-show {
  background: var(--radio-background, quark-primaryColor);
}

:host([checked]) .quark-radio-container .quark-radio-show::after {
  border: none;
}

:host([checked]) .quark-radio-icon {
  visibility: visible;
  opacity: 1;
  transition-duration: 0.2s;
  transition-property: visibility, opacity;
}

:host input[type="radio"i] {
  margin: 0;
}

